# mumfim

./: .clang-format  .gitignore
doc/: overview.txt
src/: CMakeLists.txt  adios_fiber_only.cc  batched_torch.cc  multiscale_analysis.cc  singlescale_analysis.cc  thermal_evaluation.cc
src/mumfim/analysis/: CMakeLists.txt  ElementalSystem.cc  ElementalSystem.h  FullLULAS.cc  FullLULAS.h  MatrixUtil.cc  MatrixUtil.h  Solvers.cc  Solvers.h  amsiAnalysis.cc  amsiAnalysis.h  amsiAnalysisConfig.h.in  amsiBoundaryConditionQuery.cc  amsiBoundaryConditionQuery.h  amsiBoundaryConditionQuery_impl.h  amsiBoundaryConditions.cc  amsiBoundaryConditions.h  amsiDeformation.cc  amsiDeformation.h  amsiDetectOscillation.h  amsiDetectOscillation_impl.h  amsiDofHolder.h  amsiDummyLAS.h  amsiElementalSystem.h  amsiFEA.cc  amsiFEA.h  amsiFields.cc  amsiFields.h  amsiFields_impl.h  amsiLAS.h  amsiLASQuery.h  amsiLinearElasticConstitutive.cc  amsiLinearElasticConstitutive.h  amsiNeumannIntegrators.cc  amsiNeumannIntegrators.h  amsiNeumannIntegratorsMT.cc  amsiNeumannIntegratorsMT.h  amsiNonlinearAnalysis.cc  amsiNonlinearAnalysis.h  amsiNonlinearConvergenceOperator.cc  (+28 more)
src/mumfim/macroscale/: AnalysisIO.h  AnalysisIO_impl.h  AnalysisStep.cc  AnalysisStep.h  CMakeLists.txt  EffectiveKappaEvaluator.cc  EffectiveKappaEvaluator.h  EffectiveKappaIntegrator.cc  EffectiveKappaIntegrator.h  EffectiveKappaStep.cc  EffectiveKappaStep.h  FEMAnalysis.cc  FEMAnalysis.h  HolmesMowIntegrator.h  LinearHeatConductionStep.cc  LinearHeatConductionStep.h  LinearHeatIntegrator.cc  LinearHeatIntegrator.h  LinearTissueStep.cc  LinearTissueStep.h  MultiscaleTissue.cc  MultiscaleTissue.h  MultiscaleTissueAnalysis.cc  MultiscaleTissueAnalysis.h  MultiscaleTissueStep.cc  MultiscaleTissueStep.h  MultiscaleTissue_impl.h  NeoHookeanIntegrator.h  NonlinearTissue.cc  NonlinearTissueStep.cc  NonlinearTissueStep.h  PropertyEvaluation.cc  PropertyEvaluation.h  PropertyEvaluationAnalysis.cc  PropertyEvaluationAnalysis.h  SinglescaleTissueAnalysis.cc  SinglescaleTissueAnalysis.h  StepperFactory.cc  StepperFactory.h  StiffnessVariation.cc  (+9 more)
src/mumfim/macroscale/materials/: MaterialResult.h  TorchMaterial.cc  TorchMaterial.h
src/mumfim/microscale/: BatchedFiberRVEAnalysisExplicit.h  BatchedRVEAnalysis.h  BatchedTorchAnalysis.h  CMakeLists.txt  ContinuumMechanics.h  MultiscaleMicroFOParams.cc  MultiscaleMicroFOParams.h  MultiscaleRVEAnalysis.cc  MultiscaleRVEAnalysis.h
src/mumfim/microscale/batched_analysis/: BatchedFiberRVEAnalysisExplicitBase.h  BatchedFiberRVEAnalysisExplicitTeamOuterLoop.h
src/mumfim/torch/: CMakeLists.txt  TorchUtilities.cpp  TorchUtilities.h
test/analysis/: CMakeLists.txt  mesh_gen.cc
test/analysis/analysis/: CMakeLists.txt  measure.cc  volume.cc
test/analysis/boundary_conditions/: CMakeLists.txt
test/analysis/boundary_conditions/dirichlet/: CMakeLists.txt  test.cc
test/analysis/boundary_conditions/neumann/: CMakeLists.txt  test.cc
test/analysis/deformation_gradient/: CMakeLists.txt  deformationGradient.cc
test/analysis/init/: CMakeLists.txt  test.cc
test/analysis/linear_elasticity/: CMakeLists.txt  constitutives.cc  main.cc  output  petsc_options
test/analysis/loading/: CMakeLists.txt  test.cc
test/analysis/mesh_adaptivity/: CMakeLists.txt  NonLinearElastic_UniformAdapt.h  SPRAdapt.h  error_estimator.cc
test/analysis/meshes/: cube_24_tets.sms
test/analysis/meshes/cube_24_tets_2_parts.sms/: header  smd  sms  spb
test/analysis/meshes/neuron_with_cell_30k_2_parts.sms/: header  smd  sms  spb
test/analysis/models/: cube_uniaxial_0.5.smd  cube_uniaxial_10kPa.smd
test/analysis/nonlinear_elasticity/: CMakeLists.txt  main.cc  simple-test.cc
test/macroscale/: TorchMaterial.cc  UpdatedLagrangianMaterialIntegrator.cc
test/macroscale/data/LinearHeatConduction/cube/: cube-case1.sms  cube.smd  cube_nat.x_t  load-env.sh  petsc_options  prep.sh  run.sh  simplecube.smd  simplecube.yaml
test/singlescale/examples/cube/: cube-case1.sms  cube-case2.sms  cube_int0.smb  cube_int26-case3.sms  cube_int26.smd  cube_int260.smb  cube_int26_nat.x_t  cube_int_nat.x_t  cube_nat.x_t  load-env.sh  petsc_options  prep.sh  run.sh  runthermal.sh  simplecube.yaml  simplecube_int.smd  simplecube_int.yaml  simplecube_int26.smd
test/singlescale/examples/singlescale_thermal/anisotropic_kappa/: cube.xmt_txt  cube.yaml
test/singlescale/examples/singlescale_thermal/cube/: cube.dmg  cube.smd  cube.yaml  cube0.smb  cube_nat.x_t  load-env.sh  prep.sh  simplecube.dmg  simplecube.smd
test/singlescale/examples/singlescale_thermal/natural/: amsi.yaml  cube.yaml
test/singlescale/examples/singlescale_thermal/robin/: cube-case1.sms  cube.yaml  petsc_options  run.sh
test/singlescale/examples/thermal_evaluation/cube/: beol.yaml  cube.smd  cube.xmt_txt  cube.yaml  cube0.smb  cube_int.smd  prep.sh  run.sh
test/singlescale/examples/thermal_evaluation/rve1/: beol.yaml  prep.sh  run.sh  rve1.dmg  rve1.smd  rve1.yaml  rve1_nat.x_t
test/singlescale/examples/thermal_evaluation/rve1-auto/: .env  allrun.py  bar.dmg  bar.map  bar.yaml  bar_nat.x_t  env.json  prep.sh  run.sh
